[gd_scene load_steps=2 format=3 uid="uid://b3rwk3677hyk7"]

[ext_resource type="Script" path="res://phone_control.gd" id="1_7ha2g"]

[node name="PhoneControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ha2g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1005.0
offset_top = 336.0
offset_right = 1101.0
offset_bottom = 560.0
theme_override_constants/separation = 32

[node name="ForwardButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
text = "F"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
text = "B"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugLabel" type="Label" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "R"

[connection signal="button_down" from="VBoxContainer/ForwardButton" to="." method="_on_forward_button_button_down"]
[connection signal="button_up" from="VBoxContainer/ForwardButton" to="." method="_on_forward_button_button_up"]
[connection signal="button_down" from="VBoxContainer/BackButton" to="." method="_on_back_button_button_down"]
[connection signal="button_up" from="VBoxContainer/BackButton" to="." method="_on_back_button_button_up"]
[connection signal="pressed" from="VBoxContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
